2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h,
	  Mercator/Plant.cpp, Mercator/Plant.h, tests/testPlant.cpp:
	  New classes for handling vegetation, including basics of
	  functionality, and unit tests.

2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/BasePoint.h, Mercator/BasePoint.cpp:
	  Move static float variable definition into cpp file
	  for strict C++ compliance.

2003-12-19  Al Riddoch  <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

2003-11-27  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.cpp: Use lrintf or equivalent for clean
	  fast float-int conversion.

2003-11-03 James Turner <james@worldforge.org>

	* Add ProjectBuilder project, Mercator builds with no
	  problems, but hasn't been tested.

2003-11-01  Al Riddoch  <alriddoch@zepler.org>

	* Fix BuildRequires in rpm spec.

2003-10-31 Damien McGinnes 

	* fixed tests/util_timer compile and link

2003-10-31 Damien McGinnes 

	* Added timeSeg test

2003-10-31  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp: Use apropriate rint() function to convert
	  float to int.

	* Mercator/Intersect.cpp, Mercator/Intersect.h, tests/main.cpp:
	  Add copyright notice.

	* Mercator/TerrainMod.h, Mercator/TerrainMod_impl.h: Fix copyright
	  notice.

2003-10-31 Damien McGinnes 

	* Mercator/DepthShader.cpp: fixed type warning

	* README: Added some text

2003-10-24  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp: Fix incorrect assert.

2003-09-22 Damien McGinnes 

	* Mercator/Segment.cpp: minor changes to interpolation to improve 
	  performance in the general case. (gives about a 5% speedup)

	* Mercator/Intersect.cpp: made some file scope functions static on
	  advice from rsteinke. init'ed som vars to keep gcc happy. made ray
	  intersect return true if ray begins below terrain.

2003-09-14 Damien McGinnes 
