@@ -10,3 +10,4 @@ testTerrain
 testTerrainMod
 timeSeg
 testPlant
+testQRNG
