@@ -1,5 +1,10 @@
 2004-01-13  Al Riddoch  <alriddoch@zepler.org>
 
+	* tests/testQRNG.cpp: Unit test to verify predictability of quasi
+	  random number generator.
+
+2004-01-13  Al Riddoch  <alriddoch@zepler.org>
+
 	* Mercator/Forest.cpp, Mercator/Forest.h,
 	  Mercator/Plant.cpp, Mercator/Plant.h, tests/testPlant.cpp:
 	  New classes for handling vegetation, including basics of
